--- a/manifest.json
+++ b/manifest.json
@@ -5,25 +5,23 @@
     "author": "Hari Prakash",
     "description": "Summit Learning Platform Modifications",
     "homepage_url": "https://www.summitlearning.org/my/announcements",
-    "background":{
-        "service_worker": "background.js"
-    },
 
     "content_scripts":[{
         "matches": ["*://*.summitlearning.org/*"],
-        "js": ["background.js"],
         "css":["dark-mode.css"],
         "run_at": "document_start"
     }],
 
     "action":{
         "default_icon": "/icons/icon48.png",
-        "default_popup": "dashboard.html",
         "default_title": "Summit Learning Improved"
     },
     "icons":{
         "16": "/icons/icon16.png",
         "48": "/icons/icon48.png",
         "128": "/icons/icon128.png"
-    }
+    },
+    "permissions":[
+        "scripting"
+    ]
 }
