--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
     "content_scripts":[{
         "matches": ["*://*.summitlearning.org/*"],
         "css":["dark-mode.css"],
+        "js": ["dataset.js"],
         "run_at": "document_start"
     }],
 
